# quanttrader

./: .gitignore  .gitmodules  ENHANCED_ARCHITECTURE.md  ReadMe.cn.md  ReadMe.md  build_project.bat  build_project.py  build_server.bat
server/: CMakeLists.txt  TALib.cmake  main.cpp  vcpkg-configuration.json  vcpkg.json
server/basic/common/: consts.h  singleton.h
server/basic/config/: lua_config_loader.h
server/basic/logger/: quantlogger.cpp  quantlogger.h
server/basic/time/: time_util.h  time_with_zone.cpp  time_with_zone.h
server/broker/: abstract_broker.cpp  abstract_broker.h  backtest_broker.cpp  backtest_broker.h  broker_consts.h  broker_factory.h  broker_provider.h  broker_provider_factory.h  requests.h  response.h  signalhandler.h  twsclient.cpp  twsclient.h
server/broker/tws/: tws_broker_adapter.cpp  tws_broker_adapter.h  tws_broker_register.cpp  twsclient.cpp  twsclient.h
server/cerebro/: backtest_cerebro.h  cerebro.h  cerebro_base.cpp  cerebro_base.h  cerebro_consts.h  cerebro_example.cpp  cerebro_factory.h  cerebro_manager.h  cerebro_registry.cpp  cerebro_util.h  enhanced_cerebro.cpp  enhanced_cerebro.h  live_cerebro.h
server/cerebro/backtest/: backtest_cerebro.h  backtest_cerebro_registry.cpp
server/cerebro/live/: live_cerebro.h  live_cerebro_registry.cpp
server/common/: consts.h  singleton.h
server/config/: config_data.cpp  config_data.h  lua_config_loader.cpp  lua_config_loader.h
server/data/: ReadMe.cn.md  ReadMe.en.md  data_consts.h  data_feed_registry.cpp  data_provider.cpp  data_provider.h  data_provider_factory.h  data_struct.h  lines.cpp  lines.h
server/data/common/: bar_line.cpp  bar_line.h  data_consts.h  data_provider.cpp  data_provider.h  data_provider_factory.h  data_struct.h  lines.cpp  lines.h
server/data/feed/: csv_data_feed.cpp  csv_data_feed.h  data_feed_registry.cpp  tws_data_feed.cpp  tws_data_feed.h  yahoo_data_feed.cpp  yahoo_data_feed.h
server/data/provider/: data_provider.h
server/data/replay/: data_replay_controller.cpp  data_replay_controller.h
server/data/resampler/: data_resampler.cpp  data_resampler.h
server/data/storage/: data_storage.h  db_storage.cpp  db_storage.h  file_storage.cpp  file_storage.h  storage_factory.h
server/data/util/: bar_line.cpp  bar_line.h
server/examples/: bollinger_bands_strategy.cpp  strategy_example.cpp
server/logger/: logger_consts.h  quantlogger.cpp  quantlogger.h
server/observer/: observer_base.h  performance_observer.cpp  performance_observer.h
server/runner/: cerebro_runner.h  runner_base.h  runner_const.h  runner_factory.h  runner_prepare.cpp  runner_prepare.h  runner_types.h  stock_runner.cpp  stock_runner.h
server/script/: config_sample.lua  data_config_sample.lua  log_config_sample.lua  main_config_sample.lua  trade_config_sample.lua  tws_config_sample.lua
server/service/: back_test_service.cpp  back_test_service.h  service.cpp  service.h  service_consts.h  service_factory.h  stock_trade_service.cpp  stock_trade_service.h  strategy_service.cpp  strategy_service.h  tws_service.cpp  tws_service.h
server/service/stock_service/: stock_trade_service.cpp  stock_trade_service.h  stock_trade_service_register.cpp
server/strategy/: broker_aware_strategy.cpp  broker_aware_strategy.h  custom_strategy_helper.h  slope_strategy.cpp  slope_strategy.h  strategy_base.cpp  strategy_base.h  strategy_const.h  strategy_factory.cpp  strategy_factory.h  strategy_loader.cpp  strategy_loader.h  strategy_prepare.cpp  strategy_prepare.h  strategy_util.h
server/strategy/slope_strategy/: CMakeLists.txt  slope_strategy.cpp  slope_strategy.h  slope_strategy_register.cpp
server/test/: cerebro_example.cpp  test_base.cpp  test_base.h  test_logger.cpp  test_time_with_zone.cpp
server/test/examples/: bollinger_bands_strategy.cpp  strategy_example.cpp
server/time/: time_with_zone.cpp  time_with_zone.h
strategies/: .gitignore  CMakeLists.txt  README.md
strategies/broker_aware_strategy/: CMakeLists.txt  broker_aware_strategy_register.cpp
strategies/common/: CMakeLists.txt
strategies/slope_strategy/: CMakeLists.txt  slope_strategy_register.cpp
thirdparties/tws/: API_VersionNum.txt  platformspecific.h
thirdparties/tws/samples/Cpp/TestCppClient/: TestCppClient.cpp
thirdparties/tws/samples/Java/TestJavaClient/: SampleFrame.java
thirdparties/tws/samples/Java/apidemo/: Test.java
thirdparties/tws/samples/Java/samples/rfq/: SimpleWrapper.java
thirdparties/tws/samples/Java/samples/testbed/: EWrapperImpl.java
thirdparties/tws/samples/Python/Testbed/: Program.py
thirdparties/tws/source/JavaClient/com/ib/client/: DefaultEWrapper.java  EClient.java  EClientUtils.java  EDecoder.java  EDecoderUtils.java  EWrapper.java
thirdparties/tws/source/cppclient/client/: DefaultEWrapper.cpp  EClient.cpp  EClient.h  EClientUtils.cpp  EClientUtils.h  EDecoder.cpp  EDecoder.h  EDecoderUtils.cpp  EDecoderUtils.h  EWrapper.h  EWrapper_prototypes.h
thirdparties/tws/source/cppclient/client/protobufUnix/: AllOpenOrdersRequest.pb.cc  AllOpenOrdersRequest.pb.h  AutoOpenOrdersRequest.pb.cc  AutoOpenOrdersRequest.pb.h  CancelMarketData.pb.cc  CancelMarketData.pb.h  CancelMarketDepth.pb.cc  CancelMarketDepth.pb.h  CancelOrderRequest.pb.cc  CancelOrderRequest.pb.h  ComboLeg.pb.cc  ComboLeg.pb.h  CompletedOrder.pb.cc  CompletedOrder.pb.h  CompletedOrdersEnd.pb.cc  CompletedOrdersEnd.pb.h  CompletedOrdersRequest.pb.cc  CompletedOrdersRequest.pb.h  Contract.pb.cc  Contract.pb.h  ContractData.pb.cc  ContractData.pb.h  ContractDataEnd.pb.cc  ContractDataEnd.pb.h  ContractDataRequest.pb.cc  ContractDataRequest.pb.h  ContractDetails.pb.cc  ContractDetails.pb.h  DeltaNeutralContract.pb.cc  DeltaNeutralContract.pb.h  ErrorMessage.pb.cc  ErrorMessage.pb.h  Execution.pb.cc  Execution.pb.h  ExecutionDetails.pb.cc  ExecutionDetails.pb.h  ExecutionDetailsEnd.pb.cc  ExecutionDetailsEnd.pb.h  ExecutionFilter.pb.cc  ExecutionFilter.pb.h  (+58 more)
thirdparties/tws/source/pythonclient/ibapi/: __init__.py  client.py  client_utils.py  comm.py  common.py  decoder.py  decoder_utils.py  server_versions.py  wrapper.py
(+1 files in other folders)
